# Info about this package.
[package]
authors = ["Lee Lup Yuen <luppy@appkaki.com>"]
edition = "2018"
readme  = "README.md"
name    = "bl602-simulator"
version = "0.0.1"

# External Rust libraries used by this module.  See crates.io.
[dependencies]
serde      = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

# Build this module as a Static Library, not a Rust Library.  We will link this library with the BL602 firmware.
[lib]
name       = "bl602_simulator"  # Output will be named `libbl602_simulator.a`
crate-type = ["staticlib"]
test       = false
bench      = false

# Optional features
[features]
default =  [  # Select the conditional compiled features
]