# Info about this package.
[package]
authors = ["Lee Lup Yuen <luppy@appkaki.com>"]
edition = "2018"
readme  = "README.md"
name    = "app"
version = "0.0.1"

# External Rust libraries used by this module.  See crates.io.
[dependencies]
bl602-sdk = "0.0.6"  # Rust Wrapper for BL602 IoT SDK: https://crates.io/crates/bl602-sdk
serde      = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

# Build this module as a Rust library, not a Rust application.  We will link this library with the BL602 firmware.
[lib]
name       = "app"  # Output will be named `libapp.a`
test       = false
bench      = false
crate-type = ["staticlib"]

# Optional features
[features]
default =  [  # Select the conditional compiled features
]